--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,55 +1,17 @@
-<%- include('partials/navbarHeader') -%>
+<%- include('partials/header') -%>
+
+<div>
+    <a
+      href="/logout"
+      class="col-3 btn btn-primary"
+      >Logout</a
+    >
+  </div>
 
 <div class="container">
   <div class="row mt-5">
     <div class="col-6">
-      <div>
         <%- include('partials/userDetails') -%>
-        <a
-          href="/logout"
-          class="col-3 btn btn-primary"
-          >Logout</a
-        >
-      </div>
-      <!-- adding pic -->
-      <div class="profile-pic-container">
-        <img
-          class="profile-pic-image"
-          src="<%= profile[0] == undefined ? 'https://images.dog.ceo/breeds/shiba/shiba-13.jpg' : profile[0].image%>"
-          alt=""
-        />
-      </div>
-      <!-- adding pic -->
-      <!-- profile picture upload-->
-      <div class="mt-5">
-        <h2>Change profile picture</h2>
-        <form
-          action="<%= profile[0] == undefined ? '/post/createProfilePic?_method=POST' : '/post/createProfilePic?_method=PUT' %>"
-          enctype="multipart/form-data"
-          method="POST"
-        >
-          <div class="mb-3">
-            <label
-              for="file"
-              class="form-label"
-            ></label>
-            <input
-              type="file"
-              class="form-control"
-              name="file"
-              required
-            />
-          </div>
-          <button
-            type="submit"
-            class="btn btn-primary"
-            value="Upload"
-          >
-            Submit
-          </button>
-        </form>
-      </div>
-      <!-- end profile picture -->
       <div class="mt-5">
         <h2>Add a Recipe</h2>
         <form
@@ -58,75 +20,39 @@
           method="POST"
         >
           <div class="mb-3">
-            <label
-              for="title"
-              class="form-label"
-              >Title</label
-            >
-            <input
-              type="text"
-              class="form-control"
-              id="title"
-              name="title"
-            />
+            <label for="name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="name" name="name"/>
           </div>
           <div class="mb-3">
-            <label
-              for="caption"
-              class="form-label"
-              >Caption</label
-            >
-            <textarea
-              class="form-control"
-              id="caption"
-              name="caption"
-            ></textarea>
+            <label for="ingredients" class="form-label">Ingredients</label>
+            <textarea class="form-control" id="ingredients" name="ingredients"></textarea>
           </div>
           <div class="mb-3">
-            <label
-              for="imgUpload"
-              class="form-label"
-              >Image</label
-            >
-            <div class="image-upload-div">
-            <input
-              type="file"
-              class="form-control"
-              id="imageUpload"
-              name="file"
-            />
-            <button
-            class="btn btn-secondary"
-            value="Public"
-            >
-              Public
-            </button>
-            <button
-            class="btn btn-secondary"
-            value="Private"
-            >
-              Private
-            </button>
-            </div>
+            <label for="instructions" class="form-label">Instructions</label>
+            <textarea class="form-control" id="instructions" name="instructions"></textarea>
           </div>
-          <button
-            type="submit"
-            class="btn btn-primary"
-            value="Upload"
-          >
-            Submit
-          </button>
+          <div class="mb-3">
+            <label for="lunch" class="form-label">Lunch</label>
+            <input type="checkbox" class="form-control" id="lunch" name="lunch" value="Lunch"/>
+            <label for="dinner" class="form-label">Dinner</label>
+            <input type="checkbox" class="form-control" id="dinner" name="dinner" value="Dinner"/>
+            <label for="vegetarian" class="form-label">Vegetarian</label>
+            <input type="checkbox" class="form-control" id="vegetarian" name="vegetarian" value="Vegetarian"/>
+            <label for="nonVegetarian" class="form-label">Non-Vegetarian</label>
+            <input type="checkbox" class="form-control" id="nonVegetarian" name="nonVegetarian" value="Non-Vegetarian"/>
+          </div>
+          <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
         </form>
       </div>
     </div>
     <div class="col-6">
       <ul class="row list-unstyled">
-        <% for(var i=0; i < posts.length; i++) {%>
+        <% for(let i=0; i < recipes.length; i++) {%>
         <li class="col-6 justify-content-between mt-5">
-          <a href="/post/<%= posts[i]._id %>">
+          <a href="/post/<%= recipes[i]._id %>">
             <img
               class="img-fluid"
-              src="<%= posts[i].image%>"
+              src="<%= recipes[i].image%>"
             />
           </a>
         </li>
@@ -140,7 +66,6 @@
         >
       </div>
     </div>
-    <%- include('partials/following') -%> <%- include('partials/followers') -%>
   </div>
 </div>
 
