--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -3,19 +3,19 @@
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
-      <h2><%= post.title %></h2>
-      <a href="/publicProfile/<%=post.user._id%>"><%= post.user.userName%></a>
-      <img class="img-fluid" src="<%= post.image%>" />
+      <h2><%= recipes.name %></h2>
+      <!-- <a href="/publicProfile/<%=post.user._id%>"><%= post.user.userName%></a> -->
+      <img class="img-fluid" src="<%= recipes.image%>" />
       <div class="row justify-content-between">
         <form
           class="col-1"
-          action="/post/likePost/<%= post.id %>?_method=PUT"
+          action="/post/likeRecipe/<%= recipes.id %>?_method=PUT"
           method="POST"
         >
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
         </form>
-        <h3 class="col-3">Likes: <%= post.likes %></h3>
-        <%if(post.user._id == user.id){ %>
+        <h3 class="col-3">Likes: <%= recipes.likes %></h3>
+        <%if(recipes.user._id == user.id){ %>
         <form
           action="/post/deletePost/<%= post.id %>?_method=DELETE"
           method="POST"
