fixed some errors with the createRecipe button

--- a/views/createRecipe.ejs
+++ b/views/createRecipe.ejs
@@ -1,8 +1,8 @@
-<%- include('partials/header') -%>
+<%- include('partials/appHeader') -%>
 
 <div class="mt-5">
     <h2>Add a Recipe</h2>
-    <form action="/recipe/createRecipe" enctype="multipart/form-data" method="POST"
+    <form action="/recipe/addRecipe" enctype="multipart/form-data" method="POST"
     >
         <div class="mb-3">
         <label for="name" class="form-label">Name</label>
