--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="container">
-      <div class="text-center">
+      <div class="text-left">
         <h1 class="">My Meal Planner</h1>
         <span>Prep your meals in seconds!</span>
       </div>
