added favorite and delete methods, addedhome link to get back to profile page

--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -28,7 +28,7 @@
         <span>Prep your meals in seconds!</span>
       </div>
       <div class="text-right">
-        <a href="#">Home</a>
+        <a href="/profile">Home</a>
         <a href="#">Favorites</a>
         <form action="/recipe/createRecipe" method="POST">
             <button type="submit" class="col-2 btn btn-primary">Create Recipe</button>
