--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -1,77 +1,30 @@
-<%- include('partials/navbarHeader') -%>
+<%- include('partials/appHeader') -%>
 
 <div class="container">
   <div class="row justify-content-center mt-5">
     <div class="col-6">
       <h2><%= recipes.name %></h2>
-      <!-- <a href="/publicProfile/<%=post.user._id%>"><%= post.user.userName%></a> -->
-      <img class="img-fluid" src="<%= recipes.image%>" />
       <div class="row justify-content-between">
         <form
           class="col-1"
-          action="/post/likeRecipe/<%= recipes.id %>?_method=PUT"
+          action="/recipe/favoriteRecipe/<%= recipes.id %>?_method=PUT"
           method="POST"
         >
           <button class="btn btn-primary fa fa-heart" type="submit"></button>
         </form>
-        <h3 class="col-3">Likes: <%= recipes.likes %></h3>
+        <h3 class="col-3">Favorite: <%= recipes.favorite %></h3>
         <%if(recipes.user._id == user.id){ %>
         <form
-          action="/post/deletePost/<%= post.id %>?_method=DELETE"
+          action="/recipe/deleteRecipe/<%= recipes.id %>?_method=DELETE"
           method="POST"
           class="col-3"
         >
           <button class="btn btn-primary fa fa-trash" type="submit"></button>
         </form>
-        <%}%>
+        <%}%>  
       </div>
-      <!-- form to submit comment -->
-          <form action = "/comment/createComment/<%= post.id %>" method="POST">
-          <input type="text" placeholder="Submit comment" name="comment">
-          <button type="submit">Submit</button>
-          </form>
-          <!--end of form -->
-          
-      <!-- start of comments -->
-      <div>
-      <% for(var i=0; i<comments.length; i++) {%>
-        <span class="col-6 justify-content-between mt-5">
-          <%= comments[i].comment %>
-          <br>
-            Posted:  <%= comments[i].createdAt %>
-            <br>
-            Likes:  <%= comments[i].likes %>
-          
-          <form
-          class="col-1"
-          action="/comment/likeComment/<%= comments[i]._id %>?_method=PUT"
-          method="POST"
-        >
-          <button class="btn btn-primary fa fa-heart" type="submit"></button>
-        </form>
-        <form
-          class="col-1"
-          action="/comment/deleteComment/<%= comments[i]._id %>?_method=DELETE"
-          method="POST"
-        >
-          <button class="btn btn-primary fa fa-trash" type="submit"></button>
-        </form>
-          </span>
-          <p> _______________________________________________ </p>
-      <% } %>
-    </div>
-      <!-- end of comments -->
-      
-        
-    </div>
-    <div class="col-3 mt-5">
-      <p><%= post.caption %></p>
-    </div>
-    <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
-    </div>
   </div>
+</div>
 </div>
 
 <%- include('partials/footer') -%>
