--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Meal Planner</title>
-    <link
+    <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
-    />
+    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -19,19 +19,20 @@
       crossorigin="anonymous"
     />
     <link href="/dist/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style.css"/>
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
-  <body>
-    <header class="container">
+  <body class="px-12">
+    <header class="flex flex-row justify-around">
       <div class="text-left">
-        <h1 class="">My Meal Planner</h1>
+        <h1 class="text-4xl">My Meal Planner</h1>
         <span>Prep your meals in seconds!</span>
       </div>
       <div class="text-right">
         <a href="/profile">Home</a>
         <a href="#">Favorites</a>
         <form action="/recipe/createRecipe" method="POST">
-            <button type="submit" class="col-2 btn btn-primary">Create Recipe</button>
+            <button type="submit" class="">Create Recipe</button>
         </form>
         <a href="/logout" class="col-1 btn btn-secondary">Logout</a>
       </div>
