added postCss to make tailwind work with EJS

--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -18,9 +18,7 @@
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
     />
-    <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css"/>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link href="/css/style.css" rel="stylesheet">
   </head>
   <body class="px-12">
     <header class="flex flex-row justify-around">
