--- a/views/partials/userDetails.ejs
+++ b/views/partials/userDetails.ejs
@@ -1,2 +1,7 @@
-<p><strong>Username</strong>: <%= user.userName %></p>
+<!-- <p><strong>Username</strong>: <%= user.userName %></p> -->
 
+<div class="avatar placeholder">
+    <div class="bg-neutral-focus text-neutral-content rounded-full w-24">
+      <span class="text-3xl"><%= user.userName %></span>
+    </div>
+</div>
