--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,23 @@
 <%- include('partials/header') -%>
 
-<main class="container">
+<div class="hero min-h-screen bg-base-200">
+    <div class="hero-content flex-col lg:flex-row">
+      <img src="https://unsplash.com/photos/kcA-c3f_3FE" class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+        <h1 class="text-5xl font-bold">Meal Prep in Minutes</h1>
+        <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+        <button class="btn btn-primary"><a href="/login"> Login</a></button>
+        <button class="btn btn-primary"><a href="/signup"> Signup</a></button>
+      </div>
+    </div>
+  </div>
+
+<!-- <main class="container">
     <div class="row justify-content-around mt-5">
         <a href="/login" class="col-3 btn btn-primary"> Login</a>
         <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
     </div>
 </main> 
-    
+     -->
 
 <%- include('partials/footer') -%>
