--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,21 +11,18 @@
       integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
       crossorigin="anonymous"
     /> -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
       crossorigin="anonymous"
-    />
-    <link href="/dist/output.css" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css" />
+    /> -->
+    <link href="/css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="container">
-      <div class="text-left">
-        <h1 class="">My Meal Planner</h1>
-        <span>Prep your meals in seconds!</span>
-      </div>
-    </header>
+    <div class="navbar bg-primary text-primary-content">
+      <a class="btn btn-ghost normal-case text-xl">InstaPrep</a>
+    </div>
+    
   </body>
 </html>
