--- a/views/createRecipe.ejs
+++ b/views/createRecipe.ejs
@@ -1,40 +1,45 @@
 <%- include('partials/appHeader') -%>
 
-<div class="mt-5">
-    <h2>Add a Recipe</h2>
+<div class="w-5/12 center mx-auto">
+    <h2 class="py-5 text-5xl text-center">Add a Recipe</h2>
     <form action="/recipe/addRecipe" enctype="multipart/form-data" method="POST"
     >
-        <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" name="name"/>
+        <div class="form-control w-full max-w-xs">
+            <label class="label">Name</label>
+            <input type="text" id="name" name="name" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
         </div>
-        <div class="mb-3">
-        <label for="ingredients" class="form-label">Ingredients</label>
-        <textarea class="form-control" id="ingredients" name="ingredients"></textarea>
+        <div class="form-control">
+            <label class="label">Ingredients</label> 
+            <textarea class="textarea textarea-bordered h-24" placeholder="Type ingredients separated by commas (eg. bread, milk, eggs)" id="ingredients" name="ingredients"></textarea>
         </div>
-        <div class="mb-3">
-        <label for="instructions" class="form-label">Instructions</label>
-        <textarea class="form-control" id="instructions" name="instructions"></textarea>
-        </div>
-        <div class="mb-3">
-        <div>
-            <label for="type" class="form-label">Lunch</label>
-            <input type="checkbox" id="lunch" name="type" value="Lunch"/>
+        <div class="form-control">
+            <label class="label">Instructions</label> 
+            <textarea class="textarea textarea-bordered h-24" placeholder="Type instructions separated by commas (eg. spread butter, beat eggs, whisk milk)" id="instructions" name="instructions"></textarea>
         </div>
         <div>
-            <label for="type" class="form-label">Dinner</label>
-            <input type="checkbox" id="dinner" name="type" value="Dinner">
+            <div class="form-control">
+                <label class="label cursor-pointer" for="type">Lunch
+                    <input type="checkbox" id="lunch" name="type" value="Lunch" class="checkbox checkbox-primary" />
+                </label>
+            </div>
+            <div class="form-control">
+                <label class="label cursor-pointer" for="type">Dinner
+                    <input type="checkbox" id="dinner" name="type" value="Dinner" class="checkbox checkbox-primary" />
+                </label>
+            </div>
+            <div class="form-control">
+                <label class="label cursor-pointer" for="type">Vegetarian
+                    <input type="checkbox" id="vegetarian" name="type" value="Vegetarian" class="checkbox checkbox-primary" />
+                </label>
+            </div>
+            <div class="form-control">
+                <label class="label cursor-pointer" for="type">Non-Vegetarian
+                    <input type="checkbox" id="nonVegetarian" name="type" value="Non-Vegetarian" class="checkbox checkbox-primary" />
+                </label>
+            </div>
         </div>
-        <div>
-            <label for="type" class="form-label">Vegetarian</label>
-            <input type="checkbox" id="vegetarian" name="type" value="Vegetarian"/>
-        </div>
-        <div>
-            <label for="type" class="form-label">Non-Vegetarian</label>
-            <input type="checkbox" id="nonVegetarian" name="type" value="Non-Vegetarian"/>
-        </div>
-        </div>
-        <button type="submit" class="btn btn-primary" value="Upload">Submit</button>
+        
+        <button type="submit" class="btn btn-active btn-primary mt-5 mb-5 mx-auto" value="Upload">Submit</button>
     </form>
     </div>
 
