changed the visual layout of the profile

--- a/views/partials/userDetails.ejs
+++ b/views/partials/userDetails.ejs
@@ -1,7 +1,2 @@
-<!-- <p><strong>Username</strong>: <%= user.userName %></p> -->
+<h1 class="text-6xl pb-8">Welcome <%= user.userName %>! Here are your recipes</h1>
 
-<div class="avatar placeholder">
-    <div class="bg-neutral-focus text-neutral-content rounded-full w-24">
-      <span class="text-3xl"><%= user.userName %></span>
-    </div>
-</div>
