--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -1,10 +1,9 @@
 <%- include('partials/appHeader') -%>
 
-<div class="container">
-  <div class="row justify-content-center mt-5">
-    <div class="col-6">
-      <h1><%= recipes.name %></h1>
-      <h3>Ingredients</h3>
+
+    <div class="w-8/12 mx-auto mt-6">
+      <h1 class="text-6xl"><%= recipes.name %></h1>
+      <h3 class="text-3xl pt-3">Ingredients</h3>
       <ol class="">
         <% for(let i=0; i < recipes.ingredients.length; i++) {%>
         <li class="col-6 justify-content-between mt-5">
@@ -40,7 +39,5 @@
         <%}%>  
       </div>
   </div>
-</div>
-</div>
 
 <%- include('partials/footer') -%>
