--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Meal Planner</title>
     <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
-      crossorigin="anonymous"
-    /> -->
-    <!-- <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
@@ -24,7 +18,7 @@
   <body>
     <div class="navbar bg-primary text-primary-content">
       <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl">InstaPrep</a>
+        <a class="btn btn-ghost normal-case text-xl" href="/profile">InstaPrep</a>
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal p-0">
