--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -20,25 +20,30 @@
       </ul>
 
       <div class="row justify-content-between">
+        <% if(recipes.favorite === false) {%>
         <form
           class="col-1"
           action="/recipe/favoriteRecipe/<%= recipes.id %>?_method=PUT"
           method="POST"
         >
-        <% if(recipes.favorite === true) {%>
-          <button class="btn gap-2" type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="red" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
-            Favorite
-          </button>
-        <%} else { %>
-          <button class="btn gap-2" type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
-            Favorite
-          </button>
+        <button class="btn gap-2" type="submit">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          Favorite
+        </button>
+      </form>
+      <%} else { %>
+        <form
+          class="col-1"
+          action="/recipe/unfavoriteRecipe/<%= recipes.id %>?_method=PUT"
+          method="POST"
+        >
+        <button class="btn gap-2" type="submit">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="red" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          Favorite
+        </button>
         <% } %>
         
-        </form>
-        
+
         <%if(recipes.user._id == user.id){ %>
         <form
           action="/recipe/deleteRecipe/<%= recipes.id %>?_method=DELETE"
