--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1707,6 +1707,12 @@ body[dir="rtl"] .checkbox:checked,
   text-shadow: 0 1px rgb(0 0 0 / var(--glass-text-shadow-opacity, 5%));
 }
 
+.no-animation {
+  --btn-focus-scale: 1;
+  --animation-btn: 0;
+  --animation-input: 0;
+}
+
 .menu-horizontal {
   display: inline-flex;
   width: -moz-max-content;
@@ -1836,6 +1842,10 @@ body[dir="rtl"] .checkbox:checked,
   margin-top: 1.5rem;
 }
 
+.inline {
+  display: inline;
+}
+
 .flex {
   display: flex;
 }
@@ -1880,6 +1890,18 @@ body[dir="rtl"] .checkbox:checked,
   width: 1.5rem;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-2\/4 {
+  width: 50%;
+}
+
 .max-w-xs {
   max-width: 20rem;
 }
@@ -1914,6 +1936,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .justify-end {
   justify-content: flex-end;
+}
+
+.justify-evenly {
+  justify-content: space-evenly;
 }
 
 .gap-2 {
@@ -1965,6 +1991,16 @@ body[dir="rtl"] .checkbox:checked,
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
+}
+
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+.py-10 {
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem;
 }
 
 .pt-7 {
