--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -2,60 +2,64 @@
 
 
     <div class="w-8/12 mx-auto mt-6">
-      <h1 class="text-6xl"><%= recipes.name %></h1>
-      <h3 class="text-3xl pt-3">Ingredients</h3>
-      <ul class="menu bg-base-100 w-56 rounded-box">
-        <% for(let i=0; i < recipes.ingredients.length; i++) {%>
-        <li class="py-1"><%= recipes.ingredients[i] %></li>
-        <% } %>
-      </ul>
+      <div class="flex flex-flow justify-evenly">
+        <h1 class="text-6xl"><%= recipes.name %></h1>
+        <div class="flex flex-row">
+          <% if(recipes.favorite === false) {%>
+          <form
+            class="col-1"
+            action="/recipe/favoriteRecipe/<%= recipes.id %>?_method=PUT"
+            method="POST"
+          >
+          <button class="btn no-animation" type="submit">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          </button>
+        </form>
+        <%} else { %>
+          <form
+            class="col-1"
+            action="/recipe/unfavoriteRecipe/<%= recipes.id %>?_method=PUT"
+            method="POST"
+          >
+          <button class="btn no-animation" type="submit">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="red" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+          </button>
+          <% } %>
+          </form>
+        </div>
 
+        <div>
+          <%if(recipes.user._id == user.id){ %>
+          <form
+            action="/recipe/deleteRecipe/<%= recipes.id %>?_method=DELETE"
+            method="POST"
+            class="col-3"
+          >
+          <button class="btn no-animation fa-solid fa-trash" type="submit">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg>
+          </button>
+          </form>
+          <%}%>  
+        </div>
+      </div>
+
+
+      <div class="flex flex-row py-10">
+        <ul class="menu bg-base-100 w-1/4 rounded-box">
+          <% for(let i=0; i < recipes.ingredients.length; i++) {%>
+          <li class="py-1 font-bold"><%= recipes.ingredients[i] %></li>
+          <% } %>
+        </ul>
+        <ul class="menu bg-base-100 w-2/4 rounded-box">
+          <% for(let i=0; i < recipes.instructions.length; i++) {%>
+          <li class="py-1"><%= [i+1] %>. <%= recipes.instructions[i] %></li>
+          <% } %>
+        </ul>
+      </div>
 
     
-      <h3 class="text-3xl pt-3">Instructions</h3>
-      <ul class="menu bg-base-100 w-56 rounded-box">
-        <% for(let i=0; i < recipes.instructions.length; i++) {%>
-        <li class="py-1"><%= recipes.instructions[i] %></li>
-        <% } %>
-      </ul>
 
-      <div class="row justify-content-between">
-        <% if(recipes.favorite === false) {%>
-        <form
-          class="col-1"
-          action="/recipe/favoriteRecipe/<%= recipes.id %>?_method=PUT"
-          method="POST"
-        >
-        <button class="btn gap-2" type="submit">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
-          Favorite
-        </button>
-      </form>
-      <%} else { %>
-        <form
-          class="col-1"
-          action="/recipe/unfavoriteRecipe/<%= recipes.id %>?_method=PUT"
-          method="POST"
-        >
-        <button class="btn gap-2" type="submit">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="red" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
-          Favorite
-        </button>
-        <% } %>
-        
-
-        <%if(recipes.user._id == user.id){ %>
-        <form
-          action="/recipe/deleteRecipe/<%= recipes.id %>?_method=DELETE"
-          method="POST"
-          class="col-3"
-        >
-        <button class="btn gap-2" type="submit">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" /></svg> Delete
-        </button>
-        </form>
-        <%}%>  
-      </div>
+      
   </div>
 
 <%- include('partials/footer') -%>
