--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Meal Planner</title>
+    <title>InstaPrep</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
     />
     <link href="/css/style.css" rel="stylesheet">
   </head>
@@ -16,7 +18,7 @@
   <body>
     <div class="navbar bg-primary text-primary-content">
       <div class="flex-1">
-        <a class="btn btn-ghost normal-case text-xl" href="/profile">InstaPrep</a>
+        <a class="btn btn-ghost normal-case text-3xl" href="/profile">InstaPrep</a>
       </div>
       <div class="flex-none">
         <ul class="menu menu-horizontal p-0">
