fixed createRecipe method to split on newline, made sure text would wrap on the recipe page

--- a/views/createRecipe.ejs
+++ b/views/createRecipe.ejs
@@ -14,7 +14,7 @@
         </div>
         <div class="form-control">
             <label class="label">Instructions</label> 
-            <textarea class="textarea textarea-bordered h-24" placeholder="Type instructions separated by commas (eg. spread butter, beat eggs, whisk milk)" id="instructions" name="instructions"></textarea>
+            <textarea class="textarea textarea-bordered h-24" placeholder="Type instructions separated by equal sign (eg. spread butter = beat eggs= whisk milk)" id="instructions" name="instructions"></textarea>
         </div>
         <div>
             <div class="form-control">
