--- a/views/createRecipe.ejs
+++ b/views/createRecipe.ejs
@@ -8,6 +8,10 @@
             <label class="label">Name</label>
             <input type="text" id="name" name="name" placeholder="Type here" class="input input-bordered w-full max-w-xs" />
         </div>
+        <div class="">
+            <label class="label">Image</label>
+            <input type="text" id="image" name="image" placeholder="place an image of your recipe" class="input input-bordered w-full max-w-xs"/>
+        </div>
         <div class="form-control">
             <label class="label">Ingredients</label> 
             <textarea class="textarea textarea-bordered h-24" placeholder="Type ingredients separated by commas (eg. bread, milk, eggs)" id="ingredients" name="ingredients"></textarea>
