--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>   
 </body>
 
-<footer class="footer items-center p-4 bg-neutral text-neutral-content bottom-0 absolute">
+<footer class="footer items-center p-4 bg-neutral text-neutral-content bottom-0">
   <div class="items-center"> 
     <p>Copyright © 2022 - All right reserved by Jonathan Mani</p>
   </div> 
