--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/appHeader') -%>
 
 
-    <div class="w-8/12 mx-auto mt-6">
+    <div class="w-10/12 mx-auto mt-6">
       <div class="flex flex-flow justify-start">
         <h1 class="text-6xl mr-5"><%= recipes.name %></h1>
         <div class="flex flex-row mr-3">
@@ -20,7 +20,7 @@
             method="POST"
           >
           <button class="btn no-animation" type="submit">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="red" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="#8C0327" viewBox="3 3 18 18" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z" /></svg>
           </button>
           <% } %>
           </form>
@@ -32,30 +32,29 @@
             action="/recipe/deleteRecipe/<%= recipes.id %>?_method=DELETE"
             method="POST"
           >
-          <button class="btn fa fa-solid fa-trash" type="submit">
+          <button class="btn btn-primary fa fa-solid fa-trash" type="submit">
           </button>
           </form>
           <%}%>  
         
       </div>
-
-
+      
+      
       <div class="flex flex-row py-10">
-        <ul class="menu bg-base-100 w-1/4 rounded-box">
-          <% for(let i=0; i < recipes.ingredients.length; i++) {%>
-          <li class="py-1 font-bold"><%= recipes.ingredients[i] %></li>
-          <% } %>
-        </ul>
-        <div class="menu bg-base-100 w-2/4 rounded-box">
-          <% for(let i=0; i < recipes.instructions.length; i++) {%>
-          <p class="py-1 break-normal"><%= [i+1] %>. <%= recipes.instructions[i] %></p>
-          <% } %>
+          <div class="w-1/3 h-100 mr-5">
+            <img class="object-cover" src="<%= recipes.image %>" alt=""> 
+          </div>
+          <ul class="menu bg-base-100 w-2/4 rounded-box">
+            <% for(let i=0; i < recipes.ingredients.length; i++) {%>
+            <li class="py-1 font-bold"><%= recipes.ingredients[i] %></li>
+            <% } %>
+          </ul>
+          <div class="menu bg-base-100 w-2/4 rounded-box">
+            <% for(let i=0; i < recipes.instructions.length; i++) {%>
+            <p class="py-1 break-normal"><%= [i+1] %>. <%= recipes.instructions[i] %></p>
+            <% } %>
+          </div>
         </div>
       </div>
-
-
-    
-      
-  </div>
 
 <%- include('partials/footer') -%>
