--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1845,8 +1845,16 @@ body[dir="rtl"] .checkbox:checked,
   margin-right: 0.75rem;
 }
 
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
 .flex {
   display: flex;
+}
+
+.aspect-square {
+  aspect-ratio: 1 / 1;
 }
 
 .h-24 {
@@ -1896,6 +1904,22 @@ body[dir="rtl"] .checkbox:checked,
 
 .w-2\/4 {
   width: 50%;
+}
+
+.w-36 {
+  width: 9rem;
+}
+
+.w-48 {
+  width: 12rem;
+}
+
+.w-60 {
+  width: 15rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .max-w-xs {
@@ -1965,6 +1989,10 @@ body[dir="rtl"] .checkbox:checked,
 
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .bg-base-200 {
