--- a/views/recipe.ejs
+++ b/views/recipe.ejs
@@ -45,7 +45,7 @@
       
       <div class="flex flex-row py-10">
           <div class="w-1/3 h-100 mr-5">
-            <img class="object-cover" src="<%= recipes.image %>" alt=""> 
+            <img class="object-cover rounded-lg" src="<%= recipes.image %>" alt=""> 
           </div>
           <ul class="menu bg-base-100 w-2/4 rounded-box">
             <% for(let i=0; i < recipes.ingredients.length; i++) {%>
