figured out bug with the favorites page linking to a different method

--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -3,7 +3,7 @@
 
   <div class="mx-auto w-11/12 pt-7 pb-12">
     <div class="col-6">
-      <%- include('partials/userDetails') -%>
+      <%- include('partials/userDetailsFavs') -%>
   </div>
 
 
@@ -23,8 +23,5 @@
 
 </div>
   </div>
-    
-
-
 
 <%- include('partials/footer') -%>
