added more mealPlan routes, created mealPlan form

--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -32,7 +32,11 @@
               <button type="submit">Create Recipe</button>
             </form>
           </li>
-          
+          <li>  
+            <form action="/mealPlan/createMealPlan" method="POST">
+              <button type="submit">Create MealPlan</button>
+            </form>
+          </li>
           <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
