created new functions to add recipes when creating a mealPlan

--- a/views/partials/appHeader.ejs
+++ b/views/partials/appHeader.ejs
@@ -34,6 +34,7 @@
                 <button type="submit">Create MealPlan</button>
               </form>
             </li>
+            <li><a href="/allMealPlans">All Meal Plans</a></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
         </div>
