--- a/views/mealPlan.ejs
+++ b/views/mealPlan.ejs
@@ -1,9 +1,21 @@
 <%- include('partials/appHeader') -%>
 
-    <div class="w-10/12 mx-auto mt-6">
-      <div class="flex flex-flow justify-start">
-        <h1 class="text-6xl mr-5"><%= mealPlan.name %></h1>
-      </div>
-    </div>
+
+<div>
+    <h1 class="text-6xl mr-5"><%= mealPlan.name %></h1>
+</div>
+
+<ul class="steps steps-vertical">
+  <li class="step step-primary">Register</li>
+  <li class="step step-primary">Choose plan</li>
+  <li class="step">Purchase</li>
+  <li class="step">Receive Product</li>
+</ul>
+
+
+
+
+
+
 
 <%- include('partials/footer') -%>
