--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,10 +45,10 @@
       Mealplans take minutes to make
     </h2>
 
-    <button class="btn btn-primary mt-5 mb-3">
+    <button class="btn glass mt-5 mb-3">
       <a href="/login"> Login</a>
     </button>
-    <button class="btn btn-primary mt-5 mb-3">
+    <button class="btn glass mt-5 mb-3">
       <a href="/signup"> Signup</a>
     </button>
   </div>
