--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,38 +1,46 @@
-<main class="container">
-    <div class="row justify-content-center">
-      <section class="col-6 mt-5">
-        <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-        <div class="alert alert-danger"><%= el.msg %></div>
-        <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-        messages.info.forEach( el => { %>
-        <div class="alert alert-info"><%= el.msg %></div>
-        <% }) %> <% } %>
-        <form action="/login" method="POST">
-          <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label"
-              >Email address</label
-            >
-            <input
-              type="email"
-              class="form-control"
-              id="exampleInputEmail1"
-              aria-describedby="emailHelp"
-              name="email"
-            />
-          </div>
-          <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input
-              type="password"
-              class="form-control"
-              id="exampleInputPassword1"
-              name="password"
-            />
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </section>
+<%- include('partials/header') -%>
+
+<section class="col-6 mt-5">
+  <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
+  <div class="alert alert-danger"><%= el.msg %></div>
+  <% }) %> <% } %> <% if (locals.messages.info) { %> <% messages.info.forEach(
+  el => { %>
+  <div class="alert alert-info"><%= el.msg %></div>
+  <% }) %> <% } %>
+  <div class="hero min-h-screen bg-base-200">
+    <div class="hero-content flex-col lg:flex-row-reverse">
+      <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
+        <div class="card-body">
+          <form action="/login" method="POST" class="form-control">
+            <div class="form-control">
+              <label for="exampleInputEmail1" class="label"
+                >Email address</label
+              >
+              <input
+                type="email"
+                class="input input-bordered"
+                id="exampleInputEmail1"
+                aria-describedby="emailHelp"
+                name="email"
+              />
+            </div>
+            <div class="form-control">
+              <label for="exampleInputPassword1" class="label">Password</label>
+              <input
+                type="password"
+                class="input input-bordered"
+                id="exampleInputPassword1"
+                name="password"
+              />
+            </div>
+            <div class="form-control mt-6">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-  </main>
-  
-  <%- include('partials/footer') -%>
+  </div>
+</section>
+
+<%- include('partials/footer') -%>
